--- a/404.html
+++ b/404.html
@@ -43,7 +43,7 @@
             <hr>
             <div class='_1'>THE PAGE</div>
             <div class='_2'>WAS NOT FOUND</div>
-            <a class='btn' href='/'>BACK TO CLARISHA</a>
+            <a class='btn' href='/'>BACK TO DAILYCAT</a>
         </div>
 
 <style>
@@ -157,7 +157,7 @@
 
     .cloud {
         width: 350px; height: 120px;
-        background-image: url("https://i.imgur.com/g4nUrKqt.png");
+        background-image: url("https://i.imgur.com/fkygpPqt.png");
         background: linear-gradient(top, #FFF 100%);
         background: -webkit-linear-gradient(top, #FFF 100%);
         background: -moz-linear-gradient(top, #FFF 100%);
@@ -177,7 +177,7 @@
     .cloud:after, .cloud:before {
         content: '';
         position: absolute;
-        background-image: url("https://i.imgur.com/yrF189Qt.png");
+        background-image: url("https://i.imgur.com/fkygpPqt.png");
         z-index: -1
     }
 
