--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <link href="css/modesta.css" rel="stylesheet" type="text/css">
 
   <!-- Github ribbon -->
-  <a style="z-index: 1;" href="https://github.com/clarishabot" class="github-corner" aria-label="GitHub">
+  <a style="z-index: 1;" href="https://github.com/dailycats" class="github-corner" aria-label="GitHub">
     <svg width="80" height="80" viewBox="0 0 250 250" style="z-index: 5; fill:rgba(0, 0, 0, 0.05); color:#fff; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true">
       <path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path>
       <path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor"
@@ -53,15 +53,15 @@
   <!-- Page info -->
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
   <meta name="google-site-verification" content="yzY6s-cQwtg617coCezNHy5CKdqZma1X6rfPNED0H08" />
-  <title>Clarisha</title>
+  <title>DailyCAT ✨</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Clarisha is a multi-purpose music bot ready to skill up and boost up your Discord server's voice activity.">
-  <meta name="keywords" content="Clarisha bot discord Clarisha music multipurpose bot discord">
+  <meta name="description" content="Halo! Aku Meooow🐱.Halo! Aku Meooow🐱. Setiap hari, aku akan memberikanmu gambar kucing lucu untuk membuatmu tersenyum!">
+  <meta name="keywords" content="Dailycats, dailycats, daily cats, daily cats, daily cats, daily cats, daily cats, daily cats">
 
-  <link rel="shortcut icon" type="image/x-icon" href="https://clarishabot.github.io/favicon.ico?" />
+  <link rel="shortcut icon" type="image/x-icon" href="https://dailycats.github.io/favicon.ico?" />
   <meta property="og:title" content="Home">
-  <meta property="og:description" content="Clarisha is a multi-purpose music bot ready to skill up and boost up your Discord server's voice activity..">
-  <meta property="og:image" content="https://i.imgur.com/xJMcv7t.jpg">
+  <meta property="og:description" content="Halo! Aku Meooow🐱. Setiap hari, aku akan memberikanmu gambar kucing lucu untuk membuatmu tersenyum!">
+  <meta property="og:image" content="https://i.imgur.com/l4VuIyd.png">
   <meta property="og:type" content="website">
 
 </head>
@@ -92,19 +92,20 @@
     <div style="right: 0; top: -55;" class="center-object">
       <section class="me unset">
         <div class="avatar-container">
-          <a href="https://discordapp.com/api/oauth2/authorize?client_id=1132766063365476442&scope=bot&redirect_uri=https%3A%2F%2FClarishabot.github.io%2F%3Finvited%3Dyes">
+          <a href="https://discord.com/api/oauth2/authorize?client_id=1145410245229809747&permissions=551903554656&redirect_uri=https%3A%2F%2Fdailycat.is-a.dev%2F%3Finvited%3Dyes&response_type=code&scope=guilds.join%20bot%20applications.commands">
             <img draggable="false" class="bigavatar" src="./images/avatar.png">
           </a>
         </div>
         <div class="unset">
-          <h1 style="color: #FF015B" class="title monospace">Clarisha</h1>
-          <p style="color: white" class="undertitle monospace">24/7 Use Best Music Bot For Server
+          <h1 style="color: #FF015B" class="title monospace">DailyCAT ✨</h1>
+          <p style="color: white" class="undertitle monospace">a discord bot send random picture of cats</p>
           </p>
         </div>
       </section>
       <div class="buttons">
-        <a style="width: 200px; background-color: #FF015B;" href="https://discordapp.com/api/oauth2/authorize?client_id=1132766063365476442&scope=bot&redirect_uri=https%3A%2F%2FClarishabot.github.io%2F%3Finvited%3Dyes" class="btn alizarin-dropshadow animation hover">Invite</a>
-        <a style="width: 200px; background-color: #195FF5;" href="https://Clarisha.vercel.app/" class="btn twitter-dropshadow animation hover">Website</a>
+        <a style="width: 200px; background-color: #FF015B;" href="https://discord.com/api/oauth2/authorize?client_id=1145410245229809747&permissions=551903554656&redirect_uri=https%3A%2F%2Fdailycat.is-a.dev%2F%3Finvited%3Dyes&response_type=code&scope=guilds.join%20bot%20applications.commands" class="btn alizarin-dropshadow animation hover">Invite</a>
+        <a style="width: 200px; background-color: #195FF5;" href="https://dailycat.is-a.fun/" class="btn twitter-dropshadow animation hover">Website</a>
+        <a style="width: 200px; background-color: #57d80d;" href="https://discord.gg/WFfjrQxnfH" class="btn twitter-dropshadow animation hover">Support</a>
       </div>
     </div>
   </div>
@@ -130,7 +131,7 @@
 
   <!-- main JS -->
   <script src="js/main.js"></script>
-  <script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="c70afdda-c2f2-414b-aa3d-77e20334ed5d";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
+  <!--- <script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="c70afdda-c2f2-414b-aa3d-77e20334ed5d";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script> --->
 
 
 </body>
