--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html>
 
 <head>
+  <!-- Is a dev Analytics -->
+  <script defer data-domain="dailycat.is-a.dev" src="https://analytics.is-a.dev/js/script.js"></script>
+
   <!-- fa buymeacoffee -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fork-awesome@1.2.0/css/fork-awesome.min.css" integrity="sha256-XoaMnoYC5TH6/+ihMEnospgm0J1PM/nioxbOUdnM8HY=" crossorigin="anonymous">
 
@@ -58,7 +61,7 @@
   <meta name="description" content="Halo! Aku Meooow🐱.Halo! Aku Meooow🐱. Setiap hari, aku akan memberikanmu gambar kucing lucu untuk membuatmu tersenyum!">
   <meta name="keywords" content="Dailycats, dailycats, daily cats, daily cats, daily cats, daily cats, daily cats, daily cats">
 
-  <link rel="shortcut icon" type="image/x-icon" href="https://dailycats.github.io/favicon.ico?" />
+  <link rel="shortcut icon" type="image/x-icon" href="https://dailycat.is-a.dev/favicon.ico?" />
   <meta property="og:title" content="Home">
   <meta property="og:description" content="Halo! Aku Meooow🐱. Setiap hari, aku akan memberikanmu gambar kucing lucu untuk membuatmu tersenyum!">
   <meta property="og:image" content="https://i.imgur.com/l4VuIyd.png">
@@ -92,7 +95,7 @@
     <div style="right: 0; top: -55;" class="center-object">
       <section class="me unset">
         <div class="avatar-container">
-          <a href="https://discord.com/api/oauth2/authorize?client_id=1145410245229809747&permissions=551903554656&redirect_uri=https%3A%2F%2Fdailycat.is-a.dev%2F%3Finvited%3Dyes&response_type=code&scope=guilds.join%20bot%20applications.commands">
+          <a href="https://discord.com/api/oauth2/authorize?client_id=1145410245229809747&permissions=2147609648&redirect_uri=https%3A%2F%2Fdailycat.is-a.dev%2F%3Finvited%3Dyes&response_type=code&scope=bot%20applications.commands%20guilds">
             <img draggable="false" class="bigavatar" src="./images/avatar.png">
           </a>
         </div>
@@ -103,9 +106,9 @@
         </div>
       </section>
       <div class="buttons">
-        <a style="width: 200px; background-color: #FF015B;" href="https://discord.com/api/oauth2/authorize?client_id=1145410245229809747&permissions=551903554656&redirect_uri=https%3A%2F%2Fdailycat.is-a.dev%2F%3Finvited%3Dyes&response_type=code&scope=guilds.join%20bot%20applications.commands" class="btn alizarin-dropshadow animation hover">Invite</a>
-        <a style="width: 200px; background-color: #195FF5;" href="https://dailycat.is-a.fun/" class="btn twitter-dropshadow animation hover">Website</a>
-        <a style="width: 200px; background-color: #57d80d;" href="https://discord.gg/WFfjrQxnfH" class="btn twitter-dropshadow animation hover">Support</a>
+        <a style="width: 200px; background-color: #FF015B;" href="https://discord.com/api/oauth2/authorize?client_id=1145410245229809747&permissions=2147609648&redirect_uri=https%3A%2F%2Fdailycat.is-a.dev%2F%3Finvited%3Dyes&response_type=code&scope=bot%20applications.commands%20guilds" class="btn alizarin-dropshadow animation hover">Invite Me</a>
+        <a style="width: 200px; background-color: #195FF5;" href="https://dailycat.is-a.fun/" class="btn twitter-dropshadow animation hover">Official Website</a>
+        <a style="width: 200px; background-color: #57d80d;" href="https://discord.gg/WFfjrQxnfH" class="btn twitter-dropshadow animation hover">Discord Server</a>
       </div>
     </div>
   </div>
@@ -122,7 +125,7 @@
         </a>
       </div>
       <div class="icon home">
-        <a href="https://hello.lrmn.site" target="_blank">
+        <a href="https://hi-lrmn.is-a.dev" target="_blank">
           <i class="fa fa-home"></i>
         </a>
       </div>
